Revert "Fixed Skill Average going out of screen"
This reverts commit f473319a529ba8a4e4a80d6be3de916ff2bac301.

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -1422,6 +1422,7 @@ a.additional-player-stat:hover{
     grid-area: additional;
     font-size: 12px;
     font-weight: 600;
+    padding-bottom: 5ex;
     line-height: 1.75;
     overflow: visible;
 }
